zno-macro-draft/tests/zno/ui/err/has-ident-arguments.stderr
error: invalid argument
 --> tests/ui/err/has-ident-arguments.rs:3:1
  |
3 | #[zno(a, b)]
  | ^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `zno` (in Nightly builds, run with -Z macro-backtrace for more info)
